Bug 1699923 - Revert changes to nsTArrayBackInserter::operator=. r=gerald,masayuki a=bustage-fix DONTBUILD

The changes to nsTArrayBackInserter::operator= broke the builds on Windows
under some circumstances. This reverts those changes. Necessary adaptations
in the stack are made in later patch.

Differential Revision: https://phabricator.services.mozilla.com/D109276